--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+pytest
+python-dotenv==0.19.0
+Flask==2.0.3
+flask-wtf==0.15.0
 datetime==4.4
 gitdb==4.0.10 
 gitpython==3.1.29 
 smmap==5.0.0
 
-# random
